tests/snapshots/tbir__transaction_basic_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"transaction_basic_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: TransactionBasicTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTop.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct CountCmd {
    uint64_t ticks = 2;
    bool flag = true;
    uint64_t tag = 7;
    uint64_t expect = 0;
};
inline bool operator==(const CountCmd& a, const CountCmd& b) { return a.ticks == b.ticks && a.flag == b.flag && a.tag == b.tag && a.expect == b.expect; }
inline bool operator!=(const CountCmd& a, const CountCmd& b) { return !(a == b); }

static harc_rt::HarcWide<2> harc_pack_CountCmd(const CountCmd& value) {
    harc_rt::HarcWide<2> _packed{};
    harc_rt::harc_wide_write_bits(_packed, 0, 32, value.expect);
    harc_rt::harc_wide_write_bits(_packed, 32, 16, value.tag);
    harc_rt::harc_wide_write_bits(_packed, 48, 1, value.flag);
    harc_rt::harc_wide_write_bits(_packed, 49, 8, value.ticks);
    return _packed;
}
template<typename Raw> static CountCmd harc_unpack_CountCmd(const Raw& raw) {
    if constexpr (requires { raw.ticks; raw.flag; raw.tag; raw.expect; }) {
        CountCmd value{};
        value.ticks = raw.ticks;
        value.flag = raw.flag;
        value.tag = raw.tag;
        value.expect = raw.expect;
        return value;
    } else {
    auto _packed = harc_rt::harc_wide_zext<2>(harc_rt::harc_read(raw));
    CountCmd value{};
    value.expect = (uint64_t)harc_rt::harc_bits(_packed, 31, 0);
    value.tag = (uint64_t)harc_rt::harc_bits(_packed, 47, 32);
    value.flag = (bool)harc_rt::harc_bits(_packed, 48, 48);
    value.ticks = (uint64_t)harc_rt::harc_bits(_packed, 56, 49);
    return value;
    }
}
template<typename Sig> static void harc_drive_CountCmd(Sig& sig, const CountCmd& value) {
    if constexpr (requires { sig.ticks; sig.flag; sig.tag; sig.expect; }) {
        sig.ticks = value.ticks;
        sig.flag = value.flag;
        sig.tag = value.tag;
        sig.expect = value.expect;
    } else {
        harc_rt::harc_assign(sig, harc_pack_CountCmd(value));
    }
}

struct TxnBasicTb {
    VTop* dut = nullptr;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VTop* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_TransactionBasicTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VTop;
    auto*& dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto*& tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "Top", "TransactionBasicTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    struct ClockState { const char* name; long long half_period_ps; long long next_edge_ps; int level; long long rising_count; };
    std::vector<ClockState> clocks_;
    clocks_.push_back(ClockState{"clk", 5000, 5000, 0, 0});
    dut->clk = 0;

    auto eval_clocks_until = [&](long long t_ps) {
        while (now_ps < t_ps) {
            long long next = t_ps;
            for (auto& c : clocks_) if (c.next_edge_ps < next) next = c.next_edge_ps;
            now_ps = next;
            bool _primary_rising = false;
            const char* _last_edge_clock = "";
            uint64_t _last_edge_cycle = 0;
            for (size_t i = 0; i < clocks_.size(); i++) {
                auto& c = clocks_[i];
                if (c.next_edge_ps == now_ps) {
                    c.level = !c.level;
                    if (i == 0) dut->clk = c.level;
                    c.next_edge_ps += c.half_period_ps;
                    if (c.level == 1) c.rising_count++;
                    _last_edge_clock = c.name;
                    _last_edge_cycle = (uint64_t)c.rising_count;
                    if (i == 0 && c.level == 1) { cycle_count++; _primary_rising = true; }
                }
            }
            dut->eval();
            _harc_trace_dump_at((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
            if (_primary_rising) { for (auto& _svc : _post_eval_services) _svc(); if (!_post_eval_services.empty()) dut->eval(); }
            if (_primary_rising && !_post_eval_services.empty()) _harc_trace_dump_at((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
        }
    };

    auto tick = [&]() {
        long long target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(target);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    TxnBasicTb _tb;
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    _run_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_TransactionBasicTest (TB-IR loop-switch)
            uint64_t total = 0; (void)total;
            uint64_t i = 0; (void)i;
            CountCmd cmd{}; (void)cmd;
            uint64_t _anon = 0; (void)_anon;
            uint64_t __t0 = 0; (void)__t0;
            uint64_t got = 0; (void)got;
            CountCmd final_cmd{}; (void)final_cmd;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->en, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(3));
                    __bb = 1;
                    break;
                }
                case 1: {
                    if (!((harc_rt::harc_read(dut->count_out) == 0))) {
                        sim_log_line("FAIL", "after reset: count_out=%lld, expected 0", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->count_out)));
                        ctx.errors++;
                    }
                    harc_rt::harc_assign(dut->rst, 0);
                    total = 0;
                    i = 0;
                    __bb = 2;
                    break;
                }
                case 2: {
                    if ((i <= 2)) { __bb = 3; } else { __bb = 5; }
                    break;
                }
                case 3: {
                    cmd = CountCmd{};
                    if (!((cmd.ticks == 2))) {
                        sim_log_line("FAIL", "cmd[%lld]: default ticks=%lld, expected 2", harc_rt::harc_printf_ll(i), harc_rt::harc_printf_ll(cmd.ticks));
                        ctx.errors++;
                    }
                    if (!((cmd.tag == 7))) {
                        sim_log_line("FAIL", "cmd[%lld]: default tag=%lld, expected 7", harc_rt::harc_printf_ll(i), harc_rt::harc_printf_ll(cmd.tag));
                        ctx.errors++;
                    }
                    if (!((cmd.expect == 0))) {
                        sim_log_line("FAIL", "cmd[%lld]: expect not re-zeroed (%lld)", harc_rt::harc_printf_ll(i), harc_rt::harc_printf_ll(cmd.expect));
                        ctx.errors++;
                    }
                    cmd.ticks = (cmd.ticks + i);
                    total = (total + cmd.ticks);
                    cmd.expect = total;
                    if (cmd.flag) { __bb = 7; } else { __bb = 8; }
                    break;
                }
                case 4: {
                    i = (i + 1);
                    __bb = 2;
                    break;
                }
                case 5: {
                    harc_rt::harc_assign(dut->en, 0);
                    final_cmd = CountCmd{};
                    final_cmd.expect = total;
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 14;
                    break;
                }
                case 6: {
                    _anon = 1;
                    __t0 = cmd.ticks;
                    __bb = 9;
                    break;
                }
                case 7: {
                    harc_rt::harc_assign(dut->en, 1);
                    __bb = 6;
                    break;
                }
                case 8: {
                    __bb = 6;
                    break;
                }
                case 9: {
                    if ((_anon <= __t0)) { __bb = 10; } else { __bb = 12; }
                    break;
                }
                case 10: {
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 13;
                    break;
                }
                case 11: {
                    _anon = (_anon + 1);
                    __bb = 9;
                    break;
                }
                case 12: {
                    got = harc_rt::harc_read(dut->count_out);
                    if (!((got == cmd.expect))) {
                        sim_log_line("FAIL", "cmd[%lld]: count_out=%lld, expected %lld", harc_rt::harc_printf_ll(i), harc_rt::harc_printf_ll(got), harc_rt::harc_printf_ll(cmd.expect));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "cmd[%lld] ticks=%lld tag=%lld -> count_out=%lld", harc_rt::harc_printf_ll(i), harc_rt::harc_printf_ll(cmd.ticks), harc_rt::harc_printf_ll(cmd.tag), harc_rt::harc_printf_ll(got));
                    __bb = 4;
                    break;
                }
                case 13: {
                    __bb = 11;
                    break;
                }
                case 14: {
                    if (!((harc_rt::harc_read(dut->count_out) == final_cmd.expect))) {
                        sim_log_line("FAIL", "hold: count_out=%lld, expected %lld", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->count_out)), harc_rt::harc_printf_ll(final_cmd.expect));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: 3 commands, total=%lld", harc_rt::harc_printf_ll(final_cmd.expect));
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    }(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    dut->eval();
    _harc_trace_dump_at((uint64_t)now_ps, "", 0);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        long long _target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(_target);
        sched.tick();
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_TransactionBasicTest(argc, argv);
    if (std::strcmp(test_sel, "TransactionBasicTest") == 0) return run_TransactionBasicTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "TransactionBasicTest");
    return 1;
}
